per-meeting items, also format times properly

--- a/lib/board_web/controllers/chart_html/meeting.html.heex
+++ b/lib/board_web/controllers/chart_html/meeting.html.heex
@@ -22,7 +22,7 @@
       </tr>
     </thead>
     <tbody>
-      <%= for item <- assigns[:items] do %>
+      <%= for item <- assigns[:meeting].items do %>
         <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
           <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
             <%= item.motion_id %>
